welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:-13: error: Unmatched closing brace '}' ignored here
	}
        ^Program:-11: error: illegal start of statement (no modifiers allowed here)
	override def backward(i: Int) {
        ^Program:-7: error: illegal start of statement (no modifiers allowed here)
	override def run() { 
        ^Program:10: error: ';' expected but 'else' found.
	 else   if(vuBiscuit()==false){
         ^Program:31: error: Unmatched closing brace '}' ignored here
}
^