welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
	def vuBiscuit() {
		if(vuBiscuit()==false){
  	return false; 	
	} 
	else {
		return true ;
	}
	 else   if(vuBiscuit()==false){
           avance();
	 	avance();
	 	avance();
		 avance();
	 	avance();
	 	avance();
	 	recule();
	 	recule();
	 	recule();
	 	recule();
	 	recule();
	 	recule();
	return true ;
	 }
		}
   } 		
 }
}
